Bug fix for mobile screen signup overspill

--- a/assets/css/stylesheet.css
+++ b/assets/css/stylesheet.css
@@ -319,14 +319,12 @@ align-items: center;
   }
 
   #welcomeChoices {
-    
     width: 100%;
     display: flex;
     flex-direction: column;
     justify-items: center;
     justify-content: center;
     align-items: center;
-    
   }
 
   .welcomeBox {
@@ -334,11 +332,19 @@ align-items: center;
     flex-wrap: wrap;
     flex-direction: column;
     justify-content: flex-start;
-    height: 65%px;
+    height: 70%px;
     width: 70%;
     border-radius: 8px;
     border: 1px solid black;
     background-color: white;
+  }
+
+  input[type=text] {
+    border: 2px solid black;
+    border-radius: 4px;
+    min-height: 18px;
+    font-size: 15px;
+    max-width: 60%;
   }
 
   .quizBox {
@@ -346,7 +352,7 @@ align-items: center;
     flex-wrap: nowrap;
     flex-direction: column;
     justify-content: flex-start;
-    height: 65%;
+    height: 70%;
     width: 70%;
     max-width: 250px;
     border-radius: 8px;
